2009-11-11  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Beth Dakin.

        Unskip the webkit-color-correction tests because the workaround of using
        the deviceRGBColorSpace allows the tests to pass on Windows.

        * platform/win/Skipped:

2009-11-11  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Darin Adler.

        Skip the webkit-color-correction tests because they crash on Windows 
        due to a CoreGraphics bug.

        * platform/win/Skipped:

2009-11-11  Eric Z. Ayers  <zundel@google.com>

        Reviewed by Pavel Feldman.

        Timeline tests for records generated for
        Layout, Paint, ParseHTML, MarkTimeline, and Style Recalculation

        https://bugs.webkit.org/show_bug.cgi?id=31361

        * inspector/timeline-layout-expected.txt: Added.
        * inspector/timeline-layout.html: Added.
        * inspector/timeline-mark-timeline-expected.txt: Added.
        * inspector/timeline-mark-timeline.html: Added.
        * inspector/timeline-paint-expected.txt: Added.
        * inspector/timeline-paint.html: Added.
        * inspector/timeline-parse-html-expected.txt: Added.
        * inspector/timeline-parse-html.html: Added.
        * inspector/timeline-recalculate-styles-expected.txt: Added.
        * inspector/timeline-recalculate-styles.html: Added.

2009-11-11  Jessie Berlin  <jberlin@webkit.org>

        Reviewed by Timothy Hatcher.

        Display the correct summary in the web inspector for the padding
        shorthand. Also corrects the summaries for the border-color,
        border-width, border-style, and margin shorthands.

        https://bugs.webkit.org/show_bug.cgi?id=7987

        * fast/css/shorthands-four-values-expected.txt: Added.
        * fast/css/shorthands-four-values.html: Added.

2009-11-11  Eric Z. Ayers  <zundel@google.com>

        Reviewed by Pavel Feldman.

        Added a test of an externally loaded script tag for Inspector 
        timeline records.